# Physics_engine

./: .gitignore  Header1.h  Pipeline Explanation.txt  README.md  cheatsheet.docx  collision detection implementation  documentation.txt  proof_of_concept.py  solution.drawio  steps until finished.txt
engine/core/: Actor.cc  Actor.h  CMakeLists.txt  MathLib.h  MathLibrary.h  Physics.h  intertia solution.txt
engine/render/: Actor.cc  Actor.h  CMakeLists.txt  Camera.cc  Camera.h  Debug.cc  Debug.h  DebugPShader.glsl  DebugVShader.glsl  GraphicNode.cc  GraphicNode.h  Lightning.cc  Lightning.h  MeshResource.cc  MeshResource.h  ShaderObject.cc  ShaderObject.h  ShaderResource.cc  ShaderResource.h  Sutherland_hogdman.h  TextureResource.cc  TextureResource.h  Vertex.h  stb_image.cc  stb_image.h  stb_image_write.h  tiny_gltf.h  window.cc
exts/nanovg/src/: nanovg.c
projects/ImGuiExample/code/: exampleapp.cc
projects/Mathlib/: CMakeLists.txt
projects/Mathlib/code/: main.cpp
projects/MeshRenderer/: CMakeLists.txt
projects/MeshRenderer/code/: exampleapp.cc  exampleapp.h  rule_ranges.txt
projects/MeshResource/code/: exampleapp.cc  exampleapp.h
projects/Physics/code/: exampleapp.cc  exampleapp.h  main.cc
textures/: jämnvikt rörelse mängd.drawio  ps.glsl  vs.glsl
textures/Shaders/: ps.glsl  vs.glsl
